# LiarsDice

./: .clang-format  .clang-tidy  .gitignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CONAN_SETUP.md  CONTRIBUTING.md  DataStructuresAndAlgorithmsJournal.MD  DatabaseJournal.md  Doxyfile  LICENSE  Liar's Dice Game Enhancements.md  MilestoneFourJournal_Database.docx  PlemonsBrett_LiarsDiceEnhancement_AI.rtf  README.md  README_8md.html  SupportAsyncBackupOperations.md  about.html  about_8dox.html  ai__player_8cpp.html  ai__player_8hpp.html  ai__player_8hpp.js  ai__player_8hpp_source.html  ai__system_8dox.html  ai_system.html  annotated.html  annotated_dup.js  application_8cpp.html  application_8hpp.html  application_8hpp.js  application_8hpp_source.html  architecture.html  architecture_8dox.html  architecture__diagrams_8dox.html  architecture_diagrams.html  backup__manager_8cpp.html  backup__manager_8hpp.html  backup__manager_8hpp.js  backup__manager_8hpp_source.html  (+709 more)
.github/workflows/: ci.yml  docs-simple.yml  docs.yml  documentation.yaml  install.yml  macos.yml  release.yml  standalone.yml  style.yml  test.yml  ubuntu.yml  version-update.yml  windows.yml
all/: CMakeLists.txt
apps/: CMakeLists.txt
apps/liarsdice-cli/: CMakeLists.txt  enhanced_main.cpp  main.cpp
assets/: rules.txt
assets/ui/: default.info  default.json
benchmarks/: .gitkeep
cmake/: CompilerWarnings.cmake  Documentation.cmake  Format.cmake  LiarsDiceConfig.cmake.in  Logging.cmake  StandardProjectSettings.cmake
configs/logging/: development.json  production.json  testing.json
docker/: documentation.Dockerfile  install.Dockerfile  standalone.Dockerfile  ubuntu.Dockerfile  windows.Dockerfile
docs/: DI_DESIGN_SUMMARY.md  ERD.md  Enhancements.md  Journal_Module_Five.docx  Journal_Module_Four.docx  Journal_Module_Three.docx  Journal_Module_Two.docx  LiarsDice_Pseudocode_BrettPlemons.docx  README.md  UML.md  _config.yml  constexpr-virtual-limitations.md  index.md  requirements.txt
docs/api/: .gitkeep  ai.md  configuration.md  core.md  logging.md
docs/architecture/: ai-system.md  logging-and-configuration.md
docs/design/: .gitkeep
docs/development/: logging-and-configuration-guide.md
docs/sphinx/: conf.py  index.rst
docs/technical/: commit-1-di-architecture.md  commit-2-testing-framework.md  commit-3-logging-system.md  commit-4-configuration-system.md  commit-5-validation-design.md  commit-6-ai-strategy.md  commit-7-game-state-optimization.md  commits-3-4-design.md
documentation/: CMakeLists.txt  Doxyfile  conf.py  main.md
documentation/pages/: about.dox  ai_system.dox  architecture.dox  architecture_diagrams.dox  database.dox  game_rules.dox  modules.dox  namespaces.dox  technical_notes.dox
examples/: CMakeLists.txt  basic_game.cpp  config_example.cpp  di_example.cpp
include/controller/: Game.hpp
migrations/: V001__initial_schema.down.sql  V001__initial_schema.up.sql  V002__add_statistics.down.sql  V002__add_statistics.up.sql
profiles/: ci  ci_build  default
scripts/: build-conan.sh  build.sh  clang-tidy-single.sh  format.sh  lint.sh  test-docs.sh  test.sh  update-version.sh  validate_database_schema.py
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_1c.js  all_1d.js  all_1e.js  all_1f.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_2.js  classes_3.js  classes_4.js  (+139 more)
src/: CMakeLists.txt  main.cpp
src/controller/: Game.cpp
src/include/liarsdice/detail/: .gitkeep
src/liarsdice/adapters/: .gitkeep
src/liarsdice/config/: config_manager.cpp  config_sources.cpp  config_value.cpp  game_config.cpp
src/liarsdice/core/: dice.cpp  dice_impl.cpp  game.cpp  game_impl.cpp  player.cpp  player_impl.cpp
src/liarsdice/di/: .gitkeep  service_container.cpp
src/liarsdice/exceptions/: .gitkeep
src/liarsdice/logging/: logger_manager.cpp
src/liarsdice/ui/: fuzzy_match.cpp
src/liarsdice/utils/: .gitkeep
src/liarsdice/validation/: sanitizers.cpp  validators.cpp
src/model/: Dice.cpp  Player.cpp
standalone/: CMakeLists.txt
standalone/database-demo/: CMakeLists.txt  main.cpp
standalone/source/: main.cpp
test/: CMakeLists.format.txt  CMakeLists.txt
test/robot/: AI_TESTING_GUIDE.md  LiarsDiceLibrary.py  README.md  ai_strategies.robot  ci_tests.yml  deterministic_tests.robot  edge_cases.robot  liarsdice_tests.robot  performance.robot  requirements.txt  run_tests.sh  single_player_ai_tests.robot
test/robot/assets/: rules.txt
test/robot/lib/: DocumentationLibrary.py
test/robot/tests/: test_documentation.robot
test/source/: test_ai.cpp  test_ai_advanced.cpp  test_bayesian.cpp  test_boost_di.cpp  test_config_advanced.cpp  test_data_structures.cpp  test_database.cpp  test_database_connection.cpp  test_database_connection.cpp.disabled  test_database_manager.cpp  test_database_manager_simple.cpp  test_dice.cpp  test_dice_advanced.cpp  test_game.cpp  test_game_state_storage.cpp  test_integration_advanced.cpp  test_logging_advanced.cpp  test_performance.cpp  test_player.cpp  test_player_advanced.cpp  test_schema_manager.cpp  test_service_container.cpp  test_statistics.cpp  test_validation_advanced.cpp
tests/: CMakeLists.txt
tests/benchmarks/: CMakeLists.txt  validation_benchmark.cpp
tests/fixtures/: .gitkeep
tests/integration/: .gitkeep
tests/unit/: CMakeLists.txt  test_infrastructure.hpp
tests/unit/config/: config_manager_test.cpp  config_sources_test.cpp  config_value_test.cpp  game_config_test.cpp
tests/unit/core/: dice_test.cpp  dice_test_advanced.cpp  dice_test_modern.cpp  game_test.cpp  game_test_modern.cpp  player_test.cpp  player_test_advanced.cpp  player_test_modern.cpp
tests/unit/di/: service_container_test.cpp
tests/unit/integration/: game_integration_test.cpp
tests/unit/logging/: logger_test.cpp
tests/unit/validation/: fuzz_test.cpp  validator_test.cpp
(+132 files in other folders)
